--- a/style.css
+++ b/style.css
@@ -8,11 +8,15 @@ nav li{
 h1{
     word-spacing: 90000px;
     font-family: mr-eaves-modern;
+    margin-left: 1.5rem;
 }
 h2{
     font-family: mr-eaves-modern;
     font-size: 2rem;
+    border-bottom: 2px solid grey;
+    padding:.5rem;
 }
+
 p{
     font-family: myriad-pro;
 }
@@ -24,51 +28,89 @@ section img{
     height: 100px;
     width: 100px;
 }
-section{
-    border: 1px solid red;
-}
-nav{
-    border: 1px solid blue;
-}
 #h1Con{
-    border:3px solid green;
     width: 35%;
 }
 #reason{
     margin-top: 3rem;
     width:65%;
+    margin-right: .5rem;
 }
 .iconCol{
-    border: 1px solid blue;
     text-align: center;
     padding: 1rem;
 }
-footer{
-    border: 1px solid red;
-}
-article{
-    border: 1px solid red;
-}
+
 ul{
     margin-top: 2rem;
 }
 ul article{
     display: inline-block;
 }
-
+@media only screen and (max-width: 1043px) {
+    ul article{
+    display: block;
+    }
+  }
 .carWrapper{
     height: 200px;
 }
 #whyUS{
     float:right;
-    width:35%;
+    width:45%;
+    margin-top: 1rem;
     margin-right:5em;
+    line-height: 1.3rem;
+    margin-bottom: 5rem;
   }
+  #whyUS img{
+    position: absolute;
+    top: 10%;
+    right: 70%;
+    margin-bottom: 1rem;
+  } 
+   @media only screen and (max-width: 1570px) {
+   #whyUS img{
+    position: absolute;
+    top: 13.5%;
+    right: 53%;
+    margin-bottom: 1rem;
+     }
+   }
+   @media only screen and (max-width: 1080px) {
+    #whyUS img{
+     height: 0px;
+     width: 0px;
+      }
+    }
+ #whyUs h2{
+    padding:2rem;
+ }
   #services{
-    width:35%;
+    width:45%;
     clear:right;
    margin-left:5rem;
+   margin-top: 1rem;
   }
+  #services img{
+    position: absolute;
+    right: 20%;
+    bottom: 35%;
+}
+@media only screen and (max-width: 1570px) {
+  #services img{
+    position: absolute;
+    right: 5%;
+    bottom: 25%;
+    }
+  }
+  @media only screen and (max-width: 1080px) {
+    #services img{
+     height: 0px;
+     width: 0px;
+      }
+    }
+  /* 1080px */
   nav {
       background-color: #025E7B;
   }
@@ -78,34 +120,21 @@ nav a {
 #keyvalueicons{
     background-color: #55B1AA;
 }
-#linkarticles li{
-    height: 75px;
-  
-}
-#linkarticles ul{
-    margin-left: 19%;
-}
-#wrapper{
-    width:95%;
-    margin: 0 auto;
-    border:1px solid red;
-}
 #bottomnav{
-   border: 1px solid red;
    margin-top: 5rem;
 }
 #bottomnav a{
     display: inline-block;
-    border: 1px solid blue;
     margin-left: 25%;
     height: 50px;
     width: 150px;
 }
 #bottomnav a:last-of-type{
-    margin-left:30%;
+    margin-left:27.3%;
 }
 footer{
     background-color: #025E7B;
+    padding-top: .5rem;
 }
 footer img{
    margin-left: 33.5%;
@@ -114,13 +143,32 @@ footer p:first-of-type{
     margin-left: 2rem;
 }
 footer p:last-of-type{
-   margin-left: 40%;
+   margin-left: 44.5%;
 }
+@media only screen and (max-width: 1750px) {
+    footer p:last-of-type {
+      margin-left: 35%;
+      margin-right: 1rem;
+    }
+  }
+  @media only screen and (max-width: 1288px) {
+    footer p:last-of-type {
+      margin-left: 20%;
+      margin-right: 2rem;
+    }
+  }
+  @media only screen and (max-width: 880px) {
+    footer img {
+    position: relative;
+    right: 30%;
+    }
+  }
 form{
     /* border: 1px solid red; */
     width:45%;  
-    padding:3rem 0 0 5rem;
+    /* padding:3rem 0 0 5rem; */
     float:left;
+    margin-left: 1.5rem;
   }
   #googleMaps{
     clear: left;
@@ -129,13 +177,138 @@ form{
   }
   footer{
       clear: right;
+      margin-top: 1.5rem;
+  }
+  footer p{
+    margin-bottom: .4rem;
   }
   #map {
     height: 100% ;
   }
 #googleMaps{
 height: 400px;
-width: 400px;
-margin-bottom: 3rem;
-margin-right: 3rem;
+width: 800px;
+margin-top: 1rem;
+margin-bottom: 4.5rem;
+margin-right: 88px;
+}
+form button{
+    display: block;
+}
+article li{
+    font-family: myriad-pro;
+}
+#linkarticles article:first-of-type{
+    background-image: url('images/tired.jpg');
+    background-repeat: no-repeat;
+    /* first param is width second is hegiht */
+    background-size: 300px 200px;
+}
+#linkarticles article:nth-of-type(2){
+    background-image: url('images/cat.jpg');
+    background-repeat: no-repeat;
+    /* first param is width second is hegiht */
+    background-size: 300px 200px;
+}
+#linkarticles article:last-of-type{
+    background-image: url('images/hamsster.jpg');
+    background-repeat: no-repeat;
+    /* first param is width second is hegiht */
+    background-size: 300px 200px;
+}
+#linkarticles li{
+    height: 200px;
+   
+    /* padding: 1rem; */
+    color: white;
+    width: 300px;
+    text-align: center;
+}
+
+li a{
+    color: white;
+}
+li a:visited{
+    color: white;
+}
+#linkarticles ul{
+    margin-left: 25%;
+}
+@media only screen and (max-width: 1680px) {
+    #linkarticles ul{
+     margin-left: 20%;
+    }
+  }
+  @media only screen and (max-width: 1400px) {
+    #linkarticles ul{
+     margin-left: 16%;
+    }
+  }
+  @media only screen and (max-width: 1260px) {
+    #linkarticles ul{
+     margin-left: 10%;
+     
+    }
+  }
+  @media only screen and (max-width: 1043px) {
+    #linkarticles ul{
+        margin-left: 44%;
+    }
+  }
+  @media only screen and (max-width: 900px) {
+    #linkarticles ul{
+        margin-left: 35%;
+     
+    }
+  }
+  @media only screen and (max-width: 1043px) {
+    #linkarticles li{
+    margin-top: .5rem;
+    }
+}
+.contain01{
+    width: 99.1%;
+}
+#bottomnav a{
+    color:black;
+    /* padding: 3rem 8rem; */
+   height: 5rem;
+   width: 12rem;
+   text-align: center;
+}
+#bottomnav a:visited{
+    color:black;
+}
+#bottomnav a:first-of-type{
+    color:white;
+    background-image: url('images/calmness.jpg');
+    background-repeat: no-repeat;
+    background-size: 100%;
+}
+#bottomnav a:last-of-type{
+    color:white;
+    background-image: url('images/bwrocks.jpg');
+    background-repeat: no-repeat;
+    background-size: 100%;
+}
+@media only screen and (max-width: 850px) {
+   #bottomnav{
+    display: block;
+    }
+  }
+  /* its werid but they dont work together */
+  @media only screen and (max-width: 850px) {
+    #bottomnav a:first-of-type{
+     display: block;
+     margin-left: 43%;
+     }
+   }
+   @media only screen and (max-width: 850px) {
+    #bottomnav a:last-of-type{
+     display: block;
+     margin-left: 43%;
+     }
+   }
+#whyUS p{
+    font-size: 1.2rem;
 }
