--- a/style.css
+++ b/style.css
@@ -225,32 +225,31 @@ form button{
     background-image: url('images/tired.jpg');
     background-repeat: no-repeat;
     /* first param is width second is hegiht */
-    background-size: 300px 200px;
-    margin-left: 2.3rem;
+    background-size: 100% 100%;
+    margin-left: 0;
 }
 #linkarticles li:nth-of-type(2){
     background-image: url('images/cat.jpg');
     background-repeat: no-repeat;
     /* first param is width second is hegiht */
-    background-size: 300px 200px;
+    background-size: 100% 100%;
 }
 #linkarticles li:last-of-type{
     background-image: url('images/hamsster.jpg');
     background-repeat: no-repeat;
     /* first param is width second is hegiht */
-    background-size: 300px 200px;
+    background-size: 100% 100%;
 }
 #linkarticles li{
     display: inline-block;
-    margin: 2rem;
-    
+    margin: 0;
 }
 
 #linkarticles li{
-    height: 200px;
+    height:200px;
     /* padding: 1rem; */
     color: black;
-    width: 300px;
+    width: 19%;
     text-align: center;
      border: 3px solid black; 
 }
@@ -272,39 +271,15 @@ li a:visited{
 #linkarticles ul{
     width: 95%;
     margin-top: 1rem;
+    margin-left: 22%;
 }
-@media only screen and (max-width: 1680px) {
-    #linkarticles ul{
-     margin-left: 20%;
-    }
-  }
-  @media only screen and (max-width: 1400px) {
-    #linkarticles ul{
-     margin-left: 16%;
-    }
-  }
-  @media only screen and (max-width: 1260px) {
-    #linkarticles ul{
-     margin-left: 10%;
-     
-    }
-  }
-  @media only screen and (max-width: 1043px) {
-    #linkarticles ul{
-        margin-left: 44%;
-    }
-  }
-  @media only screen and (max-width: 900px) {
-    #linkarticles ul{
-        margin-left: 35%;
-     
-    }
-  }
-  @media only screen and (max-width: 1043px) {
+ @media only screen and (max-width: 700px) {
     #linkarticles li{
-    margin-top: .5rem;
+     display: block;
+     width: 60%;
     }
-}
+  }
+ 
 .contain01{
     width: 99.1%;
 }
@@ -351,3 +326,4 @@ li a:visited{
 #whyUS p{
     font-size: 1.2rem;
 }
+
